Assets/NeoTools/StateMachine/Internal/StateMachineTransitionParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g 2018-12-10 11:35:49

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591


#pragma warning disable 3021
#pragma warning disable 0414


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;
using ConditionalAttribute = System.Diagnostics.ConditionalAttribute;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class StateMachineTransitionParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARGTYPE_DELEGATE", "ARGTYPE_FLOAT", "ARGTYPE_INT", "FLOAT", "ID", "INT", "LEFT_CBRACKET", "LEFT_PAREN", "NEWLINE", "NOT", "OR", "PROG", "PROGEXPR", "PROGEXPR_RESTART", "RIGHT_CBRACKET", "RIGHT_PAREN", "VARARGS", "VARDECL", "VARDECLBLOCK", "VARNAME", "VARTYPE", "WS", "XOR", "','", "';'"
	};
	public const int EOF=-1;
	public const int T__28=28;
	public const int T__29=29;
	public const int AND=4;
	public const int ARGTYPE_DELEGATE=5;
	public const int ARGTYPE_FLOAT=6;
	public const int ARGTYPE_INT=7;
	public const int FLOAT=8;
	public const int ID=9;
	public const int INT=10;
	public const int LEFT_CBRACKET=11;
	public const int LEFT_PAREN=12;
	public const int NEWLINE=13;
	public const int NOT=14;
	public const int OR=15;
	public const int PROG=16;
	public const int PROGEXPR=17;
	public const int PROGEXPR_RESTART=18;
	public const int RIGHT_CBRACKET=19;
	public const int RIGHT_PAREN=20;
	public const int VARARGS=21;
	public const int VARDECL=22;
	public const int VARDECLBLOCK=23;
	public const int VARNAME=24;
	public const int VARTYPE=25;
	public const int WS=26;
	public const int XOR=27;

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public StateMachineTransitionParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public StateMachineTransitionParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}
	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return StateMachineTransitionParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g"; } }


	public AstParserRuleReturnScope<CommonTree, IToken> process() {
		TreeAdaptor = new CommonTreeAdaptor();
		return prog();
	}


	[Conditional("ANTLR_TRACE")]
	protected virtual void OnCreated() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule(string ruleName, int ruleIndex) {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule(string ruleName, int ruleIndex) {}

	#region Rules

	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_prog() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_prog() {}

	// $ANTLR start "prog"
	// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:43:1: prog : ( declBlock )? ( ignore )* expr -> ^( PROG ( declBlock )? expr ) ;
	[GrammarRule("prog")]
	private AstParserRuleReturnScope<CommonTree, IToken> prog()
	{
		EnterRule_prog();
		EnterRule("prog", 1);
		TraceIn("prog", 1);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    AstParserRuleReturnScope<CommonTree, IToken> declBlock1 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore2 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> expr3 = default(AstParserRuleReturnScope<CommonTree, IToken>);

	    RewriteRuleSubtreeStream stream_declBlock=new RewriteRuleSubtreeStream(adaptor,"rule declBlock");
	    RewriteRuleSubtreeStream stream_ignore=new RewriteRuleSubtreeStream(adaptor,"rule ignore");
	    RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		try { DebugEnterRule(GrammarFileName, "prog");
		DebugLocation(43, 1);
		try
		{
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:43:6: ( ( declBlock )? ( ignore )* expr -> ^( PROG ( declBlock )? expr ) )
			DebugEnterAlt(1);
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:43:9: ( declBlock )? ( ignore )* expr
			{
			DebugLocation(43, 9);
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:43:9: ( declBlock )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, decisionCanBacktrack[1]);
			int LA1_0 = input.LA(1);

			if ((LA1_0==LEFT_CBRACKET))
			{
				alt1 = 1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:43:10: declBlock
				{
				DebugLocation(43, 10);
				PushFollow(Follow._declBlock_in_prog120);
				declBlock1=declBlock();
				PopFollow();

				stream_declBlock.Add(declBlock1.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(1); }

			DebugLocation(43, 22);
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:43:22: ( ignore )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, decisionCanBacktrack[2]);
				int LA2_0 = input.LA(1);

				if ((LA2_0==NEWLINE||LA2_0==WS))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:43:22: ignore
					{
					DebugLocation(43, 22);
					PushFollow(Follow._ignore_in_prog124);
					ignore2=ignore();
					PopFollow();

					stream_ignore.Add(ignore2.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }

			DebugLocation(43, 30);
			PushFollow(Follow._expr_in_prog127);
			expr3=expr();
			PopFollow();

			stream_expr.Add(expr3.Tree);


			{
			// AST REWRITE
			// elements: declBlock, expr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 43:35: -> ^( PROG ( declBlock )? expr )
			{
				DebugLocation(43, 38);
				// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:43:38: ^( PROG ( declBlock )? expr )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(43, 40);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(PROG, "PROG"), root_1);

				DebugLocation(43, 45);
				// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:43:45: ( declBlock )?
				if (stream_declBlock.HasNext)
				{
					DebugLocation(43, 45);
					adaptor.AddChild(root_1, stream_declBlock.NextTree());

				}
				stream_declBlock.Reset();
				DebugLocation(43, 56);
				adaptor.AddChild(root_1, stream_expr.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("prog", 1);
			LeaveRule("prog", 1);
			LeaveRule_prog();
	    }
	 	DebugLocation(44, 1);
		} finally { DebugExitRule(GrammarFileName, "prog"); }
		return retval;

	}
	// $ANTLR end "prog"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_declBlock() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_declBlock() {}

	// $ANTLR start "declBlock"
	// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:48:1: declBlock : LEFT_CBRACKET ( ignore | decl )+ RIGHT_CBRACKET -> ^( VARDECLBLOCK ( decl )+ ) ;
	[GrammarRule("declBlock")]
	private AstParserRuleReturnScope<CommonTree, IToken> declBlock()
	{
		EnterRule_declBlock();
		EnterRule("declBlock", 2);
		TraceIn("declBlock", 2);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    IToken LEFT_CBRACKET4 = default(IToken);
	    IToken RIGHT_CBRACKET7 = default(IToken);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore5 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> decl6 = default(AstParserRuleReturnScope<CommonTree, IToken>);

	    CommonTree LEFT_CBRACKET4_tree = default(CommonTree);
	    CommonTree RIGHT_CBRACKET7_tree = default(CommonTree);
	    RewriteRuleITokenStream stream_LEFT_CBRACKET=new RewriteRuleITokenStream(adaptor,"token LEFT_CBRACKET");
	    RewriteRuleITokenStream stream_RIGHT_CBRACKET=new RewriteRuleITokenStream(adaptor,"token RIGHT_CBRACKET");
	    RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");
	    RewriteRuleSubtreeStream stream_ignore=new RewriteRuleSubtreeStream(adaptor,"rule ignore");
		try { DebugEnterRule(GrammarFileName, "declBlock");
		DebugLocation(48, 1);
		try
		{
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:48:11: ( LEFT_CBRACKET ( ignore | decl )+ RIGHT_CBRACKET -> ^( VARDECLBLOCK ( decl )+ ) )
			DebugEnterAlt(1);
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:48:13: LEFT_CBRACKET ( ignore | decl )+ RIGHT_CBRACKET
			{
			DebugLocation(48, 13);
			LEFT_CBRACKET4=(IToken)Match(input,LEFT_CBRACKET,Follow._LEFT_CBRACKET_in_declBlock150);  
			stream_LEFT_CBRACKET.Add(LEFT_CBRACKET4);

			DebugLocation(48, 27);
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:48:27: ( ignore | decl )+
			int cnt3=0;
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=3;
				try { DebugEnterDecision(3, decisionCanBacktrack[3]);
				int LA3_0 = input.LA(1);

				if ((LA3_0==NEWLINE||LA3_0==WS))
				{
					alt3 = 1;
				}
				else if ((LA3_0==ID))
				{
					alt3 = 2;
				}


				} finally { DebugExitDecision(3); }
				switch (alt3)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:48:28: ignore
					{
					DebugLocation(48, 28);
					PushFollow(Follow._ignore_in_declBlock153);
					ignore5=ignore();
					PopFollow();

					stream_ignore.Add(ignore5.Tree);

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:48:35: decl
					{
					DebugLocation(48, 35);
					PushFollow(Follow._decl_in_declBlock155);
					decl6=decl();
					PopFollow();

					stream_decl.Add(decl6.Tree);

					}
					break;

				default:
					if (cnt3 >= 1)
						goto loop3;

					EarlyExitException eee3 = new EarlyExitException( 3, input );
					DebugRecognitionException(eee3);
					throw eee3;
				}
				cnt3++;
			}
			loop3:
				;

			} finally { DebugExitSubRule(3); }

			DebugLocation(48, 42);
			RIGHT_CBRACKET7=(IToken)Match(input,RIGHT_CBRACKET,Follow._RIGHT_CBRACKET_in_declBlock159);  
			stream_RIGHT_CBRACKET.Add(RIGHT_CBRACKET7);



			{
			// AST REWRITE
			// elements: decl
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 48:57: -> ^( VARDECLBLOCK ( decl )+ )
			{
				DebugLocation(48, 60);
				// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:48:60: ^( VARDECLBLOCK ( decl )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(48, 62);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(VARDECLBLOCK, "VARDECLBLOCK"), root_1);

				DebugLocation(48, 75);
				if (!(stream_decl.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_decl.HasNext )
				{
					DebugLocation(48, 75);
					adaptor.AddChild(root_1, stream_decl.NextTree());

				}
				stream_decl.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("declBlock", 2);
			LeaveRule("declBlock", 2);
			LeaveRule_declBlock();
	    }
	 	DebugLocation(49, 1);
		} finally { DebugExitRule(GrammarFileName, "declBlock"); }
		return retval;

	}
	// $ANTLR end "declBlock"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_decl() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_decl() {}

	// $ANTLR start "decl"
	// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:1: decl : type ( ignore )* name ( ignore )* LEFT_PAREN ( ignore )* ( args )? RIGHT_PAREN ( ignore )* ';' -> ^( VARDECL name type ( args )? ) ;
	[GrammarRule("decl")]
	private AstParserRuleReturnScope<CommonTree, IToken> decl()
	{
		EnterRule_decl();
		EnterRule("decl", 3);
		TraceIn("decl", 3);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    IToken LEFT_PAREN12 = default(IToken);
	    IToken RIGHT_PAREN15 = default(IToken);
	    IToken char_literal17 = default(IToken);
	    AstParserRuleReturnScope<CommonTree, IToken> type8 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore9 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> name10 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore11 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore13 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> args14 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore16 = default(AstParserRuleReturnScope<CommonTree, IToken>);

	    CommonTree LEFT_PAREN12_tree = default(CommonTree);
	    CommonTree RIGHT_PAREN15_tree = default(CommonTree);
	    CommonTree char_literal17_tree = default(CommonTree);
	    RewriteRuleITokenStream stream_29=new RewriteRuleITokenStream(adaptor,"token 29");
	    RewriteRuleITokenStream stream_RIGHT_PAREN=new RewriteRuleITokenStream(adaptor,"token RIGHT_PAREN");
	    RewriteRuleITokenStream stream_LEFT_PAREN=new RewriteRuleITokenStream(adaptor,"token LEFT_PAREN");
	    RewriteRuleSubtreeStream stream_args=new RewriteRuleSubtreeStream(adaptor,"rule args");
	    RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name");
	    RewriteRuleSubtreeStream stream_ignore=new RewriteRuleSubtreeStream(adaptor,"rule ignore");
	    RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
		try { DebugEnterRule(GrammarFileName, "decl");
		DebugLocation(51, 1);
		try
		{
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:6: ( type ( ignore )* name ( ignore )* LEFT_PAREN ( ignore )* ( args )? RIGHT_PAREN ( ignore )* ';' -> ^( VARDECL name type ( args )? ) )
			DebugEnterAlt(1);
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:8: type ( ignore )* name ( ignore )* LEFT_PAREN ( ignore )* ( args )? RIGHT_PAREN ( ignore )* ';'
			{
			DebugLocation(51, 8);
			PushFollow(Follow._type_in_decl178);
			type8=type();
			PopFollow();

			stream_type.Add(type8.Tree);
			DebugLocation(51, 13);
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:13: ( ignore )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, decisionCanBacktrack[4]);
				int LA4_0 = input.LA(1);

				if ((LA4_0==NEWLINE||LA4_0==WS))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:13: ignore
					{
					DebugLocation(51, 13);
					PushFollow(Follow._ignore_in_decl180);
					ignore9=ignore();
					PopFollow();

					stream_ignore.Add(ignore9.Tree);

					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }

			DebugLocation(51, 21);
			PushFollow(Follow._name_in_decl183);
			name10=name();
			PopFollow();

			stream_name.Add(name10.Tree);
			DebugLocation(51, 26);
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:26: ( ignore )*
			try { DebugEnterSubRule(5);
			while (true)
			{
				int alt5=2;
				try { DebugEnterDecision(5, decisionCanBacktrack[5]);
				int LA5_0 = input.LA(1);

				if ((LA5_0==NEWLINE||LA5_0==WS))
				{
					alt5 = 1;
				}


				} finally { DebugExitDecision(5); }
				switch ( alt5 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:26: ignore
					{
					DebugLocation(51, 26);
					PushFollow(Follow._ignore_in_decl185);
					ignore11=ignore();
					PopFollow();

					stream_ignore.Add(ignore11.Tree);

					}
					break;

				default:
					goto loop5;
				}
			}

			loop5:
				;

			} finally { DebugExitSubRule(5); }

			DebugLocation(51, 34);
			LEFT_PAREN12=(IToken)Match(input,LEFT_PAREN,Follow._LEFT_PAREN_in_decl188);  
			stream_LEFT_PAREN.Add(LEFT_PAREN12);

			DebugLocation(51, 45);
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:45: ( ignore )*
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, decisionCanBacktrack[6]);
				int LA6_0 = input.LA(1);

				if ((LA6_0==NEWLINE||LA6_0==WS))
				{
					alt6 = 1;
				}


				} finally { DebugExitDecision(6); }
				switch ( alt6 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:45: ignore
					{
					DebugLocation(51, 45);
					PushFollow(Follow._ignore_in_decl190);
					ignore13=ignore();
					PopFollow();

					stream_ignore.Add(ignore13.Tree);

					}
					break;

				default:
					goto loop6;
				}
			}

			loop6:
				;

			} finally { DebugExitSubRule(6); }

			DebugLocation(51, 53);
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:53: ( args )?
			int alt7=2;
			try { DebugEnterSubRule(7);
			try { DebugEnterDecision(7, decisionCanBacktrack[7]);
			int LA7_0 = input.LA(1);

			if (((LA7_0>=FLOAT && LA7_0<=INT)))
			{
				alt7 = 1;
			}
			} finally { DebugExitDecision(7); }
			switch (alt7)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:53: args
				{
				DebugLocation(51, 53);
				PushFollow(Follow._args_in_decl193);
				args14=args();
				PopFollow();

				stream_args.Add(args14.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(7); }

			DebugLocation(51, 59);
			RIGHT_PAREN15=(IToken)Match(input,RIGHT_PAREN,Follow._RIGHT_PAREN_in_decl196);  
			stream_RIGHT_PAREN.Add(RIGHT_PAREN15);

			DebugLocation(51, 71);
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:71: ( ignore )*
			try { DebugEnterSubRule(8);
			while (true)
			{
				int alt8=2;
				try { DebugEnterDecision(8, decisionCanBacktrack[8]);
				int LA8_0 = input.LA(1);

				if ((LA8_0==NEWLINE||LA8_0==WS))
				{
					alt8 = 1;
				}


				} finally { DebugExitDecision(8); }
				switch ( alt8 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:71: ignore
					{
					DebugLocation(51, 71);
					PushFollow(Follow._ignore_in_decl198);
					ignore16=ignore();
					PopFollow();

					stream_ignore.Add(ignore16.Tree);

					}
					break;

				default:
					goto loop8;
				}
			}

			loop8:
				;

			} finally { DebugExitSubRule(8); }

			DebugLocation(51, 79);
			char_literal17=(IToken)Match(input,29,Follow._29_in_decl201);  
			stream_29.Add(char_literal17);



			{
			// AST REWRITE
			// elements: name, args, type
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 51:83: -> ^( VARDECL name type ( args )? )
			{
				DebugLocation(51, 86);
				// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:86: ^( VARDECL name type ( args )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(51, 88);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(VARDECL, "VARDECL"), root_1);

				DebugLocation(51, 96);
				adaptor.AddChild(root_1, stream_name.NextTree());
				DebugLocation(51, 101);
				adaptor.AddChild(root_1, stream_type.NextTree());
				DebugLocation(51, 106);
				// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:51:106: ( args )?
				if (stream_args.HasNext)
				{
					DebugLocation(51, 106);
					adaptor.AddChild(root_1, stream_args.NextTree());

				}
				stream_args.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("decl", 3);
			LeaveRule("decl", 3);
			LeaveRule_decl();
	    }
	 	DebugLocation(52, 1);
		} finally { DebugExitRule(GrammarFileName, "decl"); }
		return retval;

	}
	// $ANTLR end "decl"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_type() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_type() {}

	// $ANTLR start "type"
	// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:54:1: type : ID -> ^( VARTYPE ID ) ;
	[GrammarRule("type")]
	private AstParserRuleReturnScope<CommonTree, IToken> type()
	{
		EnterRule_type();
		EnterRule("type", 4);
		TraceIn("type", 4);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    IToken ID18 = default(IToken);

	    CommonTree ID18_tree = default(CommonTree);
	    RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");

		try { DebugEnterRule(GrammarFileName, "type");
		DebugLocation(54, 1);
		try
		{
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:54:6: ( ID -> ^( VARTYPE ID ) )
			DebugEnterAlt(1);
			// C:\\Users\\zeano\\Dropbox\\Neo\\StateMachine\\Internal\\StateMachineTransition.g:54:8: ID
			{
